<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfilFragment">

    <TextView
        android:id="@+id/my_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="My Profile"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_photo"
        android:layout_width="113dp"
        android:layout_height="113dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_profile" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profile_photo"
        app:layout_constraintTop_toTopOf="@id/profile_photo"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/nama" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profile_photo"
        app:layout_constraintTop_toBottomOf="@id/profile_name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/username" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/profile_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profile_photo"
        app:layout_constraintTop_toBottomOf="@id/profile_username"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/phone_number" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/profile_photo"
        app:layout_constraintTop_toBottomOf="@id/profile_phone"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/edit_profile"/>

</androidx.constraintlayout.widget.ConstraintLayout>